# victoria-brief

./: .gitignore  CLAUDE.md  README.md  feeds.yaml  index.html  main.py  publish.sh  pyproject.toml
.github/workflows/: morning-digest.yml
scripts/: victoria-brief-prompt.sh  victoria-brief-run.sh
victoria_brief/: ai_summary.py  bikecount.py  cli.py  config.py  ferries.py  mailer.py  marine.py  nlp.py  photos.py  render.py  rss.py  search.py  sources.py  stocks.py  thumbnails.py  tides.py  trails.py  transit.py  weather.py  whale.py  wildfire.py
victoria_brief.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
