[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "victoria-brief"
version = "0.1.0"
description = "Daily Victoria BC morning news digest via Claude"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "duckduckgo-search>=6.0.0",
    "yfinance>=0.2.38",
    "pyyaml>=6.0",
    "nltk>=3.9",
    "scikit-learn>=1.4",
]

[project.scripts]
victoria-brief = "victoria_brief.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["victoria_brief*"]
