[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "victoria-brief"
version = "0.1.0"
description = "Daily Victoria BC morning news digest via Claude"
requires-python = ">=3.9"
dependencies = [
    "feedparser>=6.0.11",
    "ddgs>=9.0.0",
    "pyyaml>=6.0",
    "nltk>=3.9",
    "scikit-learn>=1.4",
    "requests>=2.31",
]

[project.scripts]
victoria-brief = "victoria_brief.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["victoria_brief*"]
